Update .env.example with clearer instructions, enhance installation scripts for environment variable loading and directory management, and implement a new fix_permissions.sh script for improved permission handling. Add Prometheus port configuration and refine logging for directory creation and validation processes.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Flibusta Local Mirror - Конфигурация
-# Скопируйте этот файл в .env и измените необходимые параметры
+﻿# Flibusta Local Mirror - Конфигурация
+# Скопируйте этот файл в .env и настройте параметры под ваши нужды
 
 # Пользователь базы данных
 FLIBUSTA_DBUSER=flibusta
@@ -13,7 +13,7 @@ FLIBUSTA_DBTYPE=postgres
 # Хост базы данных
 FLIBUSTA_DBHOST=postgres
 
-# Пароль базы данных (обязательно измените на безопасный!)
+# Пароль базы данных (обязательно смените на безопасный!)
 FLIBUSTA_DBPASSWORD=your_secure_password_here
 
 # Базовый путь веб-приложения (обычно пусто)
@@ -30,12 +30,16 @@ FLIBUSTA_PHP_VERSION=8.2
 
 # Путь к книгам (если они находятся в другой директории)
 # По умолчанию: ./Flibusta.Net (относительный путь)
-# Для внешней директории: /path/to/external/books (абсолютный путь)
+# Для внешних дисков: /path/to/external/books (абсолютный путь)
 # Пример: FLIBUSTA_BOOKS_PATH=/media/external_drive/books
 FLIBUSTA_BOOKS_PATH=./Flibusta.Net
 
 # Путь к SQL файлам (если они находятся в другой директории)
 # По умолчанию: ./FlibustaSQL (относительный путь)
-# Для внешней директории: /path/to/external/sql (абсолютный путь)
+# Для внешних дисков: /path/to/external/sql (абсолютный путь)
 # Пример: FLIBUSTA_SQL_PATH=/media/external_drive/sql
 FLIBUSTA_SQL_PATH=./FlibustaSQL
+
+# Порт Prometheus (по умолчанию 9090)
+# Измените, если порт 9090 занят
+FLIBUSTA_PROMETHEUS_PORT=9090
