Add HTTPS support in installation script and Nginx configuration
- Introduced HTTPS setup in install.sh, allowing users to enable SSL with Let's Encrypt during installation.
- Added logic to handle domain and email input for SSL certificate requests.
- Updated Nginx configuration to support SSL, including automatic redirection from HTTP to HTTPS.
- Enhanced docker-compose.yml to expose port 443 for HTTPS traffic.
- Updated .gitignore to exclude backup files.
- Modified nginx.conf to include Let's Encrypt challenge handling and updated server_name placeholder for SSL configuration.

--- a/phpdocker/nginx/nginx.conf
+++ b/phpdocker/nginx/nginx.conf
@@ -43,6 +43,9 @@ http {
     # Основной виртуальный хост
     server {
         listen 80 default;
+        # ВАЖНО: Для работы certbot замените _ на ваш домен (например: server_name books.weberudit.ru;)
+        # Домен не должен попадать в git - изменяйте только локально или используйте .env и скрипт замены
+        server_name _;
 
         client_max_body_size 508M;
 
@@ -70,6 +73,15 @@ http {
 
         # HSTS (только если используется HTTPS, для HTTP это предупреждение)
         # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+
+        # Let's Encrypt ACME Challenge - ВАЖНО: должен быть ПЕРЕД другими location блоками
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+            allow all;
+            try_files $uri =404;
+            access_log off;
+            log_not_found off;
+        }
 
         # try to serve file directly, fallback to index.php
         location / {
@@ -127,8 +139,8 @@ http {
             limit_rate 0;
         }
 
-        # Блокировка доступа к системным файлам
-        location ~ /\. {
+        # Блокировка доступа к системным файлам (исключая .well-known для Let's Encrypt)
+        location ~ /\.(?!well-known) {
             deny all;
             access_log off;
             log_not_found off;
