--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,8 +41,11 @@ services:
             - './cache:/application/cache'
             - '${FLIBUSTA_BOOKS_PATH:-./Flibusta.Net}:/application/flibusta'
             - './phpdocker/nginx/nginx.conf:/etc/nginx/nginx.conf'
+            - '/var/www/certbot:/var/www/certbot:ro'
+            - '/etc/letsencrypt:/etc/letsencrypt:ro'
         ports:
             - '${FLIBUSTA_PORT:-27100}:80'
+            - '443:443'
         depends_on:
             php-fpm:
                 condition: service_healthy
