--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -127,7 +127,7 @@ services:
             - '--web.console.templates=/etc/prometheus/consoles'
             - '--storage.tsdb.retention.time=15d'
         ports:
-            - '${FLIBUSTA_PROMETHEUS_PORT:-9090}:9090'
+            - "${FLIBUSTA_PROMETHEUS_PORT:-9090}:9090"
         restart: unless-stopped
         deploy:
             resources:
